# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_queue") {

    sources = [
        "It_los_queue_001.c",
        "It_los_queue_002.c",
        "It_los_queue_003.c",
        "It_los_queue_004.c",
        "It_los_queue_005.c",
        "It_los_queue_006.c",
        "It_los_queue_007.c",
        "It_los_queue_008.c",
        "It_los_queue_009.c",
        "It_los_queue_010.c",
        "It_los_queue_011.c",
        "It_los_queue_012.c",
        "It_los_queue_013.c",
        "It_los_queue_014.c",
        "It_los_queue_015.c",
        "It_los_queue_016.c",
        "It_los_queue_017.c",
        "It_los_queue_018.c",
        "It_los_queue_019.c",
        "It_los_queue_020.c",
        "It_los_queue_021.c",
        "It_los_queue_022.c",
        "It_los_queue_025.c",
        "It_los_queue_026.c",
        "It_los_queue_027.c",
        "It_los_queue_028.c",
        "It_los_queue_029.c",
        "It_los_queue_030.c",
        "It_los_queue_031.c",
        "It_los_queue_032.c",
        "It_los_queue_033.c",
        "It_los_queue_034.c",
        "It_los_queue_035.c",
        "It_los_queue_036.c",
        "It_los_queue_037.c",
        "It_los_queue_038.c",
        "It_los_queue_039.c",
        "It_los_queue_040.c",
        "It_los_queue_041.c",
        "It_los_queue_042.c",
        "It_los_queue_043.c",
        "It_los_queue_044.c",
        "It_los_queue_045.c",
        "It_los_queue_046.c",
        "It_los_queue_047.c",
        "It_los_queue_048.c",
        "It_los_queue_050.c",
        "It_los_queue_051.c",
        "It_los_queue_052.c",
        "It_los_queue_053.c",
        "It_los_queue_054.c",
        "It_los_queue_055.c",
        "It_los_queue_056.c",
        "It_los_queue_057.c",
        "It_los_queue_058.c",
        "It_los_queue_059.c",
        "It_los_queue_060.c",
        "It_los_queue_061.c",
        "It_los_queue_062.c",
        "It_los_queue_063.c",
        "It_los_queue_064.c",
        "It_los_queue_065.c",
        "It_los_queue_066.c",
        "It_los_queue_067.c",
        "It_los_queue_068.c",
        "It_los_queue_069.c",
        "It_los_queue_070.c",
        "It_los_queue_071.c",
        "It_los_queue_072.c",
        "It_los_queue_073.c",
        "It_los_queue_074.c",
        "It_los_queue_078.c",
        "It_los_queue_079.c",
        "It_los_queue_080.c",
        "It_los_queue_081.c",
        "It_los_queue_082.c",
        "It_los_queue_083.c",
        "It_los_queue_084.c",
        "It_los_queue_085.c",
        "It_los_queue_086.c",
        "It_los_queue_087.c",
        "It_los_queue_088.c",
        "It_los_queue_090.c",
        "It_los_queue_091.c",
        "It_los_queue_092.c",
        "It_los_queue_093.c",
        "It_los_queue_094.c",
        "It_los_queue_095.c",
        "It_los_queue_096.c",
        "It_los_queue_097.c",
        "It_los_queue_104.c",
        "It_los_queue_106.c",
        "It_los_queue_107.c",
        "It_los_queue_108.c",
        "It_los_queue_109.c",
        "It_los_queue_110.c",
        "It_los_queue_114.c",
        "It_los_queue.c",
        "It_los_queue_head_001.c",
        "It_los_queue_head_002.c",
        "It_los_queue_head_003.c",
        "It_los_queue_head_004.c",
        "It_los_queue_head_005.c",
        "It_los_queue_head_006.c",
        "It_los_queue_head_007.c",
        "It_los_queue_head_008.c",
        "It_los_queue_head_009.c",
        "It_los_queue_head_010.c",
        "It_los_queue_head_011.c",
        "It_los_queue_head_012.c",
        "It_los_queue_head_013.c",
        "It_los_queue_head_014.c",
        "It_los_queue_head_015.c",
        "It_los_queue_head_016.c",
        "It_los_queue_head_019.c",
        "It_los_queue_head_020.c",
        "It_los_queue_head_021.c",
        "It_los_queue_head_022.c",
        "It_los_queue_head_023.c",
        "It_los_queue_head_024.c",
        "It_los_queue_head_025.c",
        "It_los_queue_head_026.c",
        "It_los_queue_head_027.c",
        "It_los_queue_head_028.c",
        "It_los_queue_head_029.c",
        "It_los_queue_head_030.c",
        "It_los_queue_head_031.c",
        "It_los_queue_head_032.c",
        "It_los_queue_head_038.c",
        "It_los_queue_head_039.c",
        "It_los_queue_head_040.c",
        "It_los_queue_head_041.c",
        "It_los_queue_head_042.c",
        "Llt_los_queue_001.c",
        "LLt_los_queue_003.c",

    ]

    configs += [ "//kernel/liteos_m/testsuits:include" ]
}
