# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_swtmr") {

    sources = [
        "It_los_swtmr_001.c",
        "It_los_swtmr_002.c",
        "It_los_swtmr_003.c",
        "It_los_swtmr_004.c",
        "It_los_swtmr_005.c",
        "It_los_swtmr_006.c",
        "It_los_swtmr_007.c",
        "It_los_swtmr_008.c",
        "It_los_swtmr_009.c",
        "It_los_swtmr_010.c",
        "It_los_swtmr_011.c",
        "It_los_swtmr_012.c",
        "It_los_swtmr_013.c",
        "It_los_swtmr_014.c",
        "It_los_swtmr_015.c",
        "It_los_swtmr_016.c",
        "It_los_swtmr_017.c",
        "It_los_swtmr_018.c",
        "It_los_swtmr_019.c",
        "It_los_swtmr_020.c",
        "It_los_swtmr_021.c",
        "It_los_swtmr_022.c",
        "It_los_swtmr_023.c",
        "It_los_swtmr_024.c",
        "It_los_swtmr_025.c",
        "It_los_swtmr_026.c",
        "It_los_swtmr_027.c",
        "It_los_swtmr_029.c",
        "It_los_swtmr_030.c",
        "It_los_swtmr_031.c",
        "It_los_swtmr_032.c",
        "It_los_swtmr_033.c",
        "It_los_swtmr_034.c",
        "It_los_swtmr_035.c",
        "It_los_swtmr_036.c",
        "It_los_swtmr_037.c",
        "It_los_swtmr_038.c",
        "It_los_swtmr_039.c",
        "It_los_swtmr_040.c",
        "It_los_swtmr_041.c",
        "It_los_swtmr_042.c",
        "It_los_swtmr_043.c",
        "It_los_swtmr_044.c",
        "It_los_swtmr_045.c",
        "It_los_swtmr_046.c",
        "It_los_swtmr_047.c",
        "It_los_swtmr_048.c",
        "It_los_swtmr_049.c",
        "It_los_swtmr_050.c",
        "It_los_swtmr_051.c",
        "It_los_swtmr_052.c",
        "It_los_swtmr_053.c",
        "It_los_swtmr_054.c",
        "It_los_swtmr_055.c",
        "It_los_swtmr_056.c",
        "It_los_swtmr_057.c",
        "It_los_swtmr_058.c",
        "It_los_swtmr_059.c",
        "It_los_swtmr_060.c",
        "It_los_swtmr_061.c",
        "It_los_swtmr_062.c",
        "It_los_swtmr_063.c",
        "It_los_swtmr_064.c",
        "It_los_swtmr_065.c",
        "It_los_swtmr_066.c",
        "It_los_swtmr_067.c",
        "It_los_swtmr_068.c",
        "It_los_swtmr_069.c",
        "It_los_swtmr_071.c",
        "It_los_swtmr_072.c",
        "It_los_swtmr_073.c",
        "It_los_swtmr_074.c",
        "It_los_swtmr_075.c",
        "It_los_swtmr_076.c",
        "It_los_swtmr_077.c",
        "It_los_swtmr_078.c",
        "It_los_swtmr_Align_001.c",
        "It_los_swtmr_Align_002.c",
        "It_los_swtmr_Align_003.c",
        "It_los_swtmr_Align_004.c",
        "It_los_swtmr_Align_005.c",
        "It_los_swtmr_Align_006.c",
        "It_los_swtmr_Align_007.c",
        "It_los_swtmr_Align_008.c",
        "It_los_swtmr_Align_009.c",
        "It_los_swtmr_Align_010.c",
        "It_los_swtmr_Align_011.c",
        "It_los_swtmr_Align_012.c",
        "It_los_swtmr_Align_013.c",
        "It_los_swtmr_Align_014.c",
        "It_los_swtmr_Align_015.c",
        "It_los_swtmr_Align_016.c",
        "It_los_swtmr_Align_017.c",
        "It_los_swtmr_Align_018.c",
        "It_los_swtmr_Align_019.c",
        "It_los_swtmr_Align_020.c",
        "It_los_swtmr_Align_021.c",
        "It_los_swtmr_Align_022.c",
        "It_los_swtmr_Align_023.c",
        "It_los_swtmr_Align_024.c",
        "It_los_swtmr_Align_025.c",
        "It_los_swtmr_Align_026.c",
        "It_los_swtmr_Align_027.c",
        "It_los_swtmr_Align_028.c",
        "It_los_swtmr_Align_029.c",
        "It_los_swtmr_Align_030.c",
        "It_los_swtmr_Align_031.c",
        "It_los_swtmr.c",
        "It_los_swtmr_Delay_001.c",
        "It_los_swtmr_Delay_003.c",
        "It_los_swtmr_Delay_004.c",
        "It_los_swtmr_Delay_005.c",
    ]

    configs += [ "//kernel/liteos_m/testsuits:include" ]
}
