# Copyright (c) Huawei Technologies Co., Ltd. 2020. All rights reserved.

static_library("test_task") {

    sources = [
        "It_los_task.c",
        "It_los_task_001.c",
        "It_los_task_002.c",
        "It_los_task_003.c",
        "It_los_task_004.c",
        "It_los_task_005.c",
        "It_los_task_006.c",
        "It_los_task_007.c",
        "It_los_task_008.c",
        "It_los_task_010.c",
        "It_los_task_011.c",
        "It_los_task_012.c",
        "It_los_task_013.c",
        "It_los_task_014.c",
        "It_los_task_015.c",
        "It_los_task_016.c",
        "It_los_task_017.c",
        "It_los_task_018.c",
        "It_los_task_019.c",
        "It_los_task_020.c",
        "It_los_task_021.c",
        "It_los_task_022.c",
        "It_los_task_023.c",
        "It_los_task_024.c",
        "It_los_task_025.c",
        "It_los_task_026.c",
        "It_los_task_027.c",
        "It_los_task_028.c",
        "It_los_task_029.c",
        "It_los_task_030.c",
        "It_los_task_031.c",
        "It_los_task_032.c",
        "It_los_task_033.c",
        "It_los_task_034.c",
        "It_los_task_035.c",
        "It_los_task_036.c",
        "It_los_task_037.c",
        "It_los_task_038.c",
        "It_los_task_039.c",
        "It_los_task_040.c",
        "It_los_task_041.c",
        "It_los_task_042.c",
        "It_los_task_043.c",
        "It_los_task_046.c",
        "It_los_task_047.c",
        "It_los_task_048.c",
        "It_los_task_049.c",
        "It_los_task_050.c",
        "It_los_task_051.c",
        "It_los_task_052.c",
        "It_los_task_053.c",
        "It_los_task_054.c",
        "It_los_task_055.c",
        "It_los_task_056.c",
        "It_los_task_057.c",
        "It_los_task_058.c",
        "It_los_task_059.c",
        "It_los_task_060.c",
        "It_los_task_061.c",
        "It_los_task_062.c",
        "It_los_task_063.c",
        "It_los_task_064.c",
        "It_los_task_065.c",
        "It_los_task_066.c",
        "It_los_task_067.c",
        "It_los_task_068.c",
        "It_los_task_069.c",
        "It_los_task_070.c",
        "It_los_task_071.c",
        "It_los_task_072.c",
        "It_los_task_073.c",
        "It_los_task_074.c",
        "It_los_task_075.c",
        "It_los_task_076.c",
        "It_los_task_077.c",
        "It_los_task_078.c",
        "It_los_task_079.c",
        "It_los_task_080.c",
        "It_los_task_081.c",
        "It_los_task_082.c",
        "It_los_task_083.c",
        "It_los_task_084.c",
        "It_los_task_085.c",
        "It_los_task_086.c",
        "It_los_task_087.c",
        "It_los_task_088.c",
        "It_los_task_089.c",
        "It_los_task_090.c",
        "It_los_task_091.c",
        "It_los_task_092.c",
        "It_los_task_093.c",
        "It_los_task_094.c",
        "It_los_task_095.c",
        "It_los_task_096.c",
        "It_los_task_097.c",
        "It_los_task_098.c",
        "It_los_task_099.c",
        "It_los_task_100.c",
        "It_los_task_101.c",
        "It_los_task_102.c",
        "It_los_task_103.c",
        "It_los_task_104.c",
        "It_los_task_105.c",
        "It_los_task_106.c",
        "It_los_task_107.c",
        "It_los_task_108.c",
        "It_los_task_109.c",
        "It_los_task_110.c",
        "It_los_task_111.c",
        "It_los_task_112.c",
        "It_los_task_113.c",
        "It_los_task_114.c",
        "It_los_task_115.c",
        "It_los_task_116.c",
        "It_los_task_117.c",
    ]

    configs += [ "//kernel/liteos_m/testsuits:include" ]
}
